<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/pool_url_title"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:layout_weight="2"
        android:padding="5dp"
        android:text="@string/pool_url_title"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault" />

    <Spinner
        android:id="@+id/spinnerCustomServer"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_weight="2"
        android:background="@drawable/custom_spinner_background"
        android:gravity="center"
        android:spinnerMode="dropdown" />

    <TextView
        android:id="@+id/pool_url_selected"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_weight="1"
        android:paddingBottom="5dp"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/holo_blue_light"></View>


    <TextView
        android:id="@+id/user_view"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="2"
        android:gravity="center"
        android:padding="5dp"
        android:text="User"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault" />

    <Spinner
        android:id="@+id/spinnerCustomUser"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_weight="2"
        android:background="@drawable/custom_spinner_background"
        android:gravity="center"
        android:spinnerMode="dropdown" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/holo_blue_light"></View>

    <TextView
        android:id="@+id/password_view"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="2"
        android:padding="5dp"
        android:gravity="center"
        android:text="Password"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault" />

    <Spinner
        android:id="@+id/spinnerCustomPassword"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_weight="2"
        android:background="@drawable/custom_spinner_background"
        android:gravity="center"
        android:spinnerMode="dropdown" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/holo_blue_light"></View>

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/thread_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:padding="3dp"
                android:text="Threads:"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault" />

            <Spinner
                android:id="@+id/spinnerCustomThreads"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:background="@drawable/custom_spinner_background"
                android:spinnerMode="dropdown" />

            <TextView
                android:id="@+id/thread_priority_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:padding="3dp"
                android:text="Priority:"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault" />

            <Spinner
                android:id="@+id/spinnerCustomPriority"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:background="@drawable/custom_spinner_background"
                android:spinnerMode="dropdown" />
        </TableRow>
    </TableLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/holo_blue_light"></View>

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <CheckBox
                android:id="@+id/settings_checkBox_background"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:layout_weight="1"

                android:text="@string/settings_service_background" />

            <CheckBox
                android:id="@+id/settings_checkBox_screen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:text="@string/settings_service_screen" />

        </TableRow>
    </TableLayout>

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btn_verify"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="20dp"
                android:layout_weight="1"
                android:background="@drawable/button_shape_selector"
                android:shadowColor="#000000"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="10"
                android:text="Verify"
                android:textColor="#FFFFFF"
                android:layout_margin="10dp"
                android:textSize="15sp" />

            <Button
                android:id="@+id/btn_open_miner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="20dp"
                android:layout_weight="1"
                android:background="@drawable/button_shape_selector"
                android:shadowColor="#000000"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="10"
                android:text="Open Miner"
                android:textColor="#FFFFFF"
                android:layout_margin="10dp"
                android:textSize="15sp" />


        </TableRow>
    </TableLayout>



</LinearLayout>